Started side-nav

--- a/morphi/src/app/core/side-nav/side-nav.component.html
+++ b/morphi/src/app/core/side-nav/side-nav.component.html
@@ -1,5 +1,20 @@
-<div>
+<div class="side-nav-container">
   <div class="logo">m</div>
-  <div class="nav-link-container"></div>
-  <div class="settings container"></div>
+  <div class="nav-link-container">
+    <a href="">
+      <img class="nav-link" src="../../../assets/article_black_48dp.svg" />
+    </a>
+    <a href="">
+      <img class="nav-link" src="../../../assets/source_black_48dp.svg" />
+    </a>
+    <a href="">
+      <img class="nav-link" src="../../../assets/table_rows_black_48dp.svg" />
+    </a>
+    <div class="spacer"></div>
+    <div class="settings container">
+      <a href="">
+        <img class="nav-link" src="../../../assets/settings_black_48dp.svg" />
+      </a>
+    </div>
+  </div>
 </div>
