--- a/morphi/src/app/app.component.html
+++ b/morphi/src/app/app.component.html
@@ -1,3 +1,11 @@
-<div>
-  <app-side-nav></app-side-nav>
+<div class="app-container">
+  <div class="side-nav-container">
+    <app-side-nav></app-side-nav>
+  </div>
+  <div class="app-content">
+    <div class="spacer"></div>
+    <div>
+      <app-footer></app-footer>
+    </div>
+  </div>
 </div>
