Added some fields

--- a/morphi/src/app/app.component.html
+++ b/morphi/src/app/app.component.html
@@ -3,6 +3,13 @@
     <app-side-nav></app-side-nav>
   </div>
   <div class="app-content">
+    <div style="margin: 30px">
+      <app-text-field label="First Name"></app-text-field>
+    </div>
+    <div style="margin: 30px">
+      <app-button type="filled" label="Save" style="margin: 10px 0 0 10px"></app-button>
+      <app-button type="outlined" label="Cancel" style="margin: 10px 0 0 10px"></app-button>
+    </div>
     <div class="spacer"></div>
     <div>
       <app-footer></app-footer>
